--- a/style.css
+++ b/style.css
@@ -5,17 +5,18 @@
 * {
     margin: 0px;
     padding: 0px;
+    font-family: 'Hanken Grotesk', sans-serif;
+    box-sizing: border-box;
 }
 
 body, html {
-    height: 100vh;
-    width: 100vw;
-    font-family: 'Hanken Grotesk', sans-serif;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 main {
-    width: 100vw;
-    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -23,117 +24,112 @@ main {
 
 section#card {
     width: 300px;
-    height: 90%;
-    box-shadow: 0px 0px 20px black;
+    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.281);
 }
 
 section#background {
+    width: 100%;
+    height: 50%;
     background-image: linear-gradient(to bottom, hsl(252, 100%, 67%), hsl(241, 81%, 54%));
-    height: 40%;
-    padding: 30px;
     border-radius: 0px 0px 20px 20px;
-    color: white;
     text-align: center;
+    padding: 15px 20px;
 }
 
-section#background > div#highlight {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin: auto;
-    width: 20%;
-    height: 20%;
-    padding: 30px;
-    background-image: linear-gradient(to top, hsla(256, 72%, 46%, 1), hsla(241, 72%, 46%, 0));
-    box-shadow: inset 0px 0px 100px rgba(0, 0, 0, 0.164);
-    border-radius: 50%;
+section#background > p#top {
+    margin-bottom: 15px;
+    color: rgba(255, 255, 255, 0.697);
 }
 
-section#background > div#yresult {
-    display: flex;
-    justify-content: center;
-    align-items: end;
+section#background > p#bottom {
+    margin-top: 7px;
     margin-bottom: 10px;
-    color: hsl(241, 100%, 89%);
+    font-size: .9em;
+    color: rgba(255, 255, 255, 0.697);
 }
 
 section#background > h1 {
-    margin-top: 20px;
-    margin-bottom: 5px;
+    margin-top: 15px;
+    color: white;
 }
 
-section#background > p {
-    color: hsl(241, 100%, 89%);
-}
-
-div#highlight > p {
+div#circle {
+    background-image: linear-gradient(to top, hsla(241, 72%, 46%, 0), hsla(256, 72%, 46%, 1));
+    box-shadow: inset 0px 0px 30px rgba(0, 0, 0, 0.153);
+    color: white;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
     margin: auto;
-    font-size: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 section#summary {
+    width: 100%;
     height: 50%;
-    margin: 10px 20px 0px 20px;
+    padding: 15px 20px;
 }
 
-section#summary > div.results {
-    width: 100%;
-    margin-bottom: 10px;
-    height: 35px;
-    border-radius: 20px;
-    padding: 5px;
+div.category {
+    background-color: hsl(241, 100%, 89%);
+    margin: 15px 0px;
+    padding: 10px;
+    border-radius: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-div.results > div.category {
-    display: flex;
-    justify-content: start;
-    align-items: center;
-}
-
-div.results > div.number {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-
 div#reaction {
-    background-color: hsla(0, 100%, 67%, 0.189);
-    color: hsl(224, 30%, 27%);
-    font-weight: bolder;
+    background-color: hsla(0, 100%, 67%, 0.164);
+}
+
+div#reaction > div#type-reaction { 
+    color: rgba(255, 0, 0, 0.693);
 }
 
 div#memory {
-    background-color: hsla(39, 100%, 56%, 0.427);
-    color: hsl(224, 30%, 27%);
-    font-weight: bolder;
+    background-color: hsla(39, 100%, 56%, 0.164);
+}
+
+div#memory > div#type-memory {
+    color: hsla(39, 100%, 56%, 0.763);
 }
 
 div#verbal {
-    background-color: hsla(166, 100%, 37%, 0.23);
-    color: ;
-    font-weight: bolder;
+    background-color: hsla(166, 100%, 37%, 0.061);
+}
+
+div#verbal > div#type-verbal {
+    color: hsla(166, 100%, 37%, 0.759);
 }
 
 div#visual {
-    background-color: hsla(234, 85%, 45%, 0.287);
-    color: hsl(224, 30%, 27%);
-    font-weight: bolder;
+    background-color: hsla(234, 85%, 45%, 0.089);
+}
+
+div#visual > div#type-visual {
+    color: hsla(234, 85%, 45%, 0.759);
 }
 
 div#button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    background-color: black;
+    background-color: rgb(44, 44, 44);
     color: white;
-    width: 100%;
-    height: 35px;
-    margin: auto;
-    padding: 5px;
+    text-align: center;
+    padding: 10px;
+    margin-top: 20px;
+    margin-bottom: 8px;
     border-radius: 20px;
+}
+
+div.score {
+    color: rgba(0, 0, 0, 0.378);
+    font-weight: bolder;
+}
+
+div.score > strong {
+    color: black;
 }
