--- a/style.css
+++ b/style.css
@@ -55,10 +55,10 @@ section#background > h1 {
 
 div#circle {
     background-image: linear-gradient(to top, hsla(241, 72%, 46%, 0), hsla(256, 72%, 46%, 1));
-    box-shadow: inset 0px 0px 30px rgba(0, 0, 0, 0.153);
+    box-shadow: inset 0px 0px 30px rgba(0, 0, 0, 0.281);
     color: white;
-    width: 100px;
-    height: 100px;
+    width: 110px;
+    height: 110px;
     border-radius: 50%;
     margin: auto;
     display: flex;
@@ -68,6 +68,7 @@ div#circle {
 }
 
 section#summary {
+    color: rgba(44, 44, 44, 0.877);
     width: 100%;
     height: 50%;
     padding: 15px 20px;
@@ -83,19 +84,23 @@ div.category {
     align-items: center;
 }
 
-div#reaction {
-    background-color: hsla(0, 100%, 67%, 0.164);
+div.element {
+    display: flex;
 }
 
-div#reaction > div#type-reaction { 
+div#reaction {
+    background-color: hsla(0, 100%, 67%, 0.076);
+}
+
+div#element-reaction {
     color: rgba(255, 0, 0, 0.693);
 }
 
 div#memory {
-    background-color: hsla(39, 100%, 56%, 0.164);
+    background-color: hsla(39, 100%, 56%, 0.096);
 }
 
-div#memory > div#type-memory {
+div#element-memory {
     color: hsla(39, 100%, 56%, 0.763);
 }
 
@@ -103,7 +108,7 @@ div#verbal {
     background-color: hsla(166, 100%, 37%, 0.061);
 }
 
-div#verbal > div#type-verbal {
+div#element-verbal {
     color: hsla(166, 100%, 37%, 0.759);
 }
 
@@ -111,8 +116,12 @@ div#visual {
     background-color: hsla(234, 85%, 45%, 0.089);
 }
 
-div#visual > div#type-visual {
+div#element-visual {
     color: hsla(234, 85%, 45%, 0.759);
+}
+
+span.material-symbols-outlined {
+    padding-right: 8px;
 }
 
 div#button {
@@ -131,5 +140,33 @@ div.score {
 }
 
 div.score > strong {
-    color: black;
+    color: rgb(44, 44, 44);
+}
+
+@media screen and (min-width: 768px) {
+    section#card {
+        display: flex;
+        width: 550px;
+        box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.148);
+        border-radius: 20px;
+    }
+
+    section#background {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 360px;
+        border-radius: 20px;
+    }
+
+    section#background > p#top {
+        margin-top: 10px;
+    }
+
+    div#circle {
+        height: 150px;
+        width: 150px;
+        font-size: 1.2em;
+    }
 }
