--- a/style.css
+++ b/style.css
@@ -164,6 +164,10 @@ div.score > strong {
         margin-top: 10px;
     }
 
+    section#background > p#bottom {
+        margin: 7px 20px 10px 20px;
+    }
+
     div#circle {
         height: 150px;
         width: 150px;
